--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.ServiceProviderAdmin"
         tools:targetApi="31">
         <activity
+            android:name=".manageservice.AddService"
+            android:exported="false" />
+        <activity
+            android:name=".manageservice.DetailService"
+            android:exported="false" />
+        <activity
+            android:name=".manageservice.ManageService"
+            android:exported="false" />
+        <activity
             android:name=".Category.CreateCategory"
             android:exported="false" />
         <activity
